Vertical and Horizontal Scroll Bar Issue Solved

--- a/src/index.css
+++ b/src/index.css
@@ -150,3 +150,16 @@
     transition: none !important;
   }
 }
+.hide-scrollbar {
+  /* Hides scrollbar for IE and Edge */
+  -ms-overflow-style: none;  
+  /* Hides scrollbar for Firefox */
+  scrollbar-width: none;     
+}
+
+/* Hides scrollbar for Chrome, Safari, and Opera (Webkit browsers) */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+}
